--- a/starfish/.config/starship.toml
+++ b/starfish/.config/starship.toml
@@ -6,3 +6,14 @@ error_symbol = "[->](bold red)"
 
 [aws]
 disabled = true
+
+[sudo]
+disabled = false
+
+[battery]
+disabled = false
+charging_symbol = "⚡️ "
+
+[[battery.display]]
+threshold = 80
+style = "bold red"
